// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/blocksEditor/blocks/markdown should match Display snapshot 1`] = `
<div>
  <div
    class="octo-editor-preview"
  >
    <p>
      test-value
    </p>
  </div>
</div>
`;

exports[`components/blocksEditor/blocks/markdown should render markdown with bold text 1`] = `
<div>
  <div
    class="octo-editor-preview"
  >
    <p>
      This is 
      <strong>
        bold
      </strong>
       text
    </p>
  </div>
</div>
`;

exports[`components/blocksEditor/blocks/markdown should show placeholder when empty 1`] = `
<div>
  <div
    class="octo-editor-preview octo-placeholder"
  />
</div>
`;
